# map-to-curve-gmmz

./: .gitignore  Cargo.toml  Nargo.toml  README.md  get_const.py  karatsuba_deferred.py  map_to_curve_native.txt  poseidon_native.txt  poseidon_non_native.txt  print_const.py  use_goldilocks.sh
native_noir_map_to_curve/: Nargo.toml  Prover.toml
native_noir_map_to_curve/src/: attacks.nr  main.nr
native_noir_poseidon_hash_to_curve/: Nargo.toml  Prover.toml
native_noir_poseidon_hash_to_curve/src/: main.nr
noir_custom_hashes/: Nargo.toml
noir_custom_hashes/src/: constants.nr  lib.nr
noir_map_to_curve/: Nargo.toml  Prover.toml
noir_map_to_curve/src/: attacks.nr  main.nr  main_simple.nr
noir_poseidon_map_to_curve/: Nargo.toml  Prover.toml
noir_poseidon_map_to_curve/src/: main.nr
non_native_field_ops/: Nargo.toml  Prover.toml
non_native_field_ops/src/: lib.nr
proofs/: proof
src/: ark_constants  main.rs  noir_poseidon_constants.rs  poseidon_bn254.rs  utils.rs
