[package]
name = "map-to-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.5", features = ["std"] }
ark-ec = { version = "0.5", features = ["std"] }
ark-test-curves = "0.5.0"
ark-std = "0.5.0"
ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"
# Poseidon implementation
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["sponge", "std", "crh"] }
ark-sponge = { version = "0.3.0", default-features = false, features = ["std"] }   
hex = "0.4.3"
once_cell = "1.17.1"
num-bigint = "0.4" 
num-traits = "0.2"
# [dependencies]
# ark-std = "0.5.0"
# ark-ff  = { version = "0.5", features = ["std"] }
# ark-ec  = { version = "0.5", features = ["std"] }
# ark-bn254 = "0.5"

# ark-crypto-primitives = { version = "0.5", default-features = false, features = ["sponge", "std"] }